--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ padding: 7px
 }
 #teste{
    position: relative;
+   max-width: 1000px;
+   min-width: 999px;
+   display: flex;
+   justify-content: center;
 }
 #fecharDetalhes{
     position: absolute;
